# CNN_For_Time_Series

./: pyproject.toml
CNN_Model/: client.py  server.py  strategy.py  task.py
outputs/2025-01-27/09-46-03/: run_config.json
outputs/2025-03-19/05-52-48/: results.json
outputs/2025-03-19/05-53-46/: results.json
outputs/2025-03-19/06-02-10/: results.json
outputs/2025-03-19/06-02-59/: results.json
outputs/2025-03-19/06-06-41/: results.json
wandb/: latest-run
wandb/run-20250127_094037-wfyz571w/: run-wfyz571w.wandb
wandb/run-20250127_094431-8rmez4e1/: run-8rmez4e1.wandb
wandb/run-20250127_094604-mo5fxr6u/: run-mo5fxr6u.wandb
wandb/run-20250128_062121-nc4oyn07/: run-nc4oyn07.wandb
wandb/run-20250128_062307-hgdvygpz/: run-hgdvygpz.wandb
wandb/run-20250209_221615-8k6wdtlu/: run-8k6wdtlu.wandb
wandb/run-20250319_053131-f9lddbqi/: run-f9lddbqi.wandb
wandb/run-20250319_053504-ntogwepa/: run-ntogwepa.wandb
wandb/run-20250319_053854-ihvgbb8i/: run-ihvgbb8i.wandb
wandb/run-20250319_054042-osb27923/: run-osb27923.wandb
wandb/run-20250319_055347-leja8pt0/: run-leja8pt0.wandb
wandb/run-20250319_060216-m0w81nwy/: run-m0w81nwy.wandb
wandb/run-20250319_060647-mznsmp65/: run-mznsmp65.wandb
wandb/run-20250319_061002-jj9hbggk/: run-jj9hbggk.wandb
wandb/run-20250319_061243-b6s28ist/: run-b6s28ist.wandb
wandb/run-20250319_063718-upsg3kgx/: run-upsg3kgx.wandb
wandb/run-20250319_064015-7spev6h3/: run-7spev6h3.wandb
wandb/run-20250319_064236-qhh9n802/: run-qhh9n802.wandb
wandb/run-20250319_070109-6eme7tda/: run-6eme7tda.wandb
(+72 files in other folders)
