[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CNN_Model"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "ray >= 2.10.0",
    "wandb==0.17.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
 
[tool.flwr.app]
publisher = "CNN_Model"

[tool.flwr.app.components]
serverapp = "CNN_Model.server:app"
clientapp = "CNN_Model.client:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-fit = 0.5
fraction-evaluate = 0.5
local-epochs = 30
server-device = "cpu"
use-wandb = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 1.0 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 1.0 # at most 4 ClientApps will run in a given GPU